--- a/Assets/AdventureGameStudio/Editor/AdventureGameFgImageEditor/AdventureGameFgImageEditor.uxml
+++ b/Assets/AdventureGameStudio/Editor/AdventureGameFgImageEditor/AdventureGameFgImageEditor.uxml
@@ -24,14 +24,14 @@
             </ui:VisualElement>
             <ui:ListView focusable="true" show-border="true" show-foldout-header="false" virtualization-method="DynamicHeight" show-add-remove-footer="true" name="FaceList" show-bound-collection-size="false" binding-path="faceGroup" style="flex-grow: 4;" />
         </ui:VisualElement>
-        <ui:VisualElement name="MainBody" class="padding_5" style="width: 50%;">
+        <ui:VisualElement name="MainBodyCotanier" class="padding_5" style="width: 50%;">
             <ui:VisualElement style="margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; border-bottom-width: 1px; border-bottom-color: rgb(0, 0, 0); padding-left: 4px; padding-right: 4px; padding-top: 4px; padding-bottom: 4px;">
                 <uie:Vector2Field label="画布" binding-path="boundingBoxSize" name="CanvasSize" style="margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0;" />
                 <ui:DropdownField label="Body" index="-1" name="BodyDropDown" />
                 <ui:DropdownField label="Face" index="-1" name="FaceDropDown" />
             </ui:VisualElement>
-            <ui:ScrollView name="MainBody" style="height: auto; width: auto; padding-left: 5px; padding-right: 5px; padding-top: 5px; padding-bottom: 5px; flex-grow: 1;">
-                <ui:VisualElement name="FgImageContainer" style="flex-shrink: 0; width: 0; height: 0; background-color: rgb(255, 255, 255); background-image: url(&apos;project://database/Assets/AdventureGameStudio/Editor/AdventureGameFgImageEditor/transparent%20layer.jpg?fileID=2800000&amp;guid=736ae9df5d8a4e64b84786fd56412b19&amp;type=3#transparent layer&apos;); -unity-background-scale-mode: scale-and-crop; position: absolute;">
+            <ui:ScrollView name="MainBody" mode="Vertical" touch-scroll-type="Unrestricted" style="height: auto; width: auto; padding-left: 5px; padding-right: 5px; padding-top: 5px; padding-bottom: 5px; flex-grow: 1; transform-origin: left top;">
+                <ui:VisualElement name="FgImageContainer" style="flex-shrink: 0; width: 0; height: 0; background-color: rgb(255, 255, 255); background-image: url(&apos;project://database/Assets/AdventureGameStudio/Editor/AdventureGameFgImageEditor/transparent%20layer.jpg?fileID=2800000&amp;guid=736ae9df5d8a4e64b84786fd56412b19&amp;type=3#transparent layer&apos;); -unity-background-scale-mode: scale-and-crop; position: absolute; transform-origin: left top;">
                     <ui:VisualElement name="BodyImage" style="width: 0; height: 0; transform-origin: left top; left: 0; top: 0; position: absolute;" />
                     <ui:VisualElement name="FaceImage" style="width: 0; height: 0; transform-origin: left top; left: 0; top: 0; position: absolute;" />
                     <ui:VisualElement name="FaceAppend" style="width: 0; height: 0; transform-origin: left top; left: 0; top: 0; position: absolute;" />
